<resources>
    <string name="app_name">Gul Bazar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fromCamera">С камеры</string>
    <string name="fromGallery">Из галереи</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_onBoard">Keyingisi</string>
    <string name="start_onBoard">Boshladik!</string>
    <string name="gulbazarga_xush_kelibsiz">GulBazarga xush kelibsiz</string>
    <string name="kirish">Kirish</string>
    <string name="telefon_raqam_edit_text">Telefon raqam</string>
    <string name="parol_login_editText">Parol</string>
    <string name="kirish_green">Kirish</string>
    <string name="ro_yxatdan_o_tish">Ro\'yxatdan o\'tish</string>
    <string name="buketlar">Buketlar</string>
    <string name="green_house">Green House</string>
    <string name="register">Ro\'yxatdan o\'tish</string>
    <string name="_998">+998</string>
    <string name="next">Keyingisi</string>
    <string name="phone_type">** *** ** **</string>
    <string name="ilova_versiyasi_1_0_0">Ilova versiyasi: 1.0.0</string>
</resources>